k8s/overlays/vx-home/apps/pgadmin/patches/secrets-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  template:
    spec:
      containers:
      - name: pgadmin
